# DocMarq

./: changes.md  example.py  pyproject.toml  readme-docmarq.md  readme.md
docmarq/: __init__.py  constants.py  core.py  fonts.py  inline.py  layout.py  readme.md  structure.py  styles.py  tables.py  utils.py
docmarq/md/: __init__.py  image_utils.py  mermaid.py  presets.py  readme.md  render.py  renderer.py  slug.py  style.py  tokens.py
docmarq/tests/: conftest.py  test_md_smoke.py  test_smoke.py  test_units.py
